# F1-First-Position-Predictor

./: .gitignore  .pylintrc  EDA.py  LICENSE.txt  README.md  preprocess_data.py  pyproject.toml  train_test_model.py
data/: constructor_results_clean.csv  constructor_standings_clean.csv  drivers_standings_clean.csv  final_data.csv  pit_stops_clean.csv  qualifying_clean.csv  sprint_results_clean.csv
lib/: classifier.py  clean_data.py  create_final_data.py  import_data.py  settings.py
model/: model_gb_clf.joblib
